    The FFTPACK sources have been removed from Octave.

 ** The OSMesa library is no longer used.  To print invisible figures
    when using OpenGL graphics, the Qt QOFFSCREENSURFACE feature must be
    available and you must use the qt graphics toolkit.

 ** It is now possible to use files and folders containing Unicode
    characters in Windows.

 ** New functions added in 5.0:

      isfile
      isfolder
      movegui
      openfig
      ordeig
      savefig
      uitable

 ** Legacy functions.

    The following functions have been declared legacy functions which
    means they are obsolete and should not be used in any new code.
    Unlike deprecated functions, however, their removal from Octave has
    not yet been scheduled.

      Function             | Replacement
      ---------------------|------------------
      findstr              | strfind
      flipdim              | flip
      isdir                | isfolder or dir_in_loadpath
      isequalwithequalnans | isequaln
      isstr                | ischar
      setstr               | char
      strmatch             | strncmp or strcmp
      strread              | textscan
      textread             | textscan

 ** Deprecated functions.

    The following functions have been deprecated in Octave 5.0 and will
    be removed from Octave 7 (or whatever version is the second major
    release after 5.0):

      Function             | Replacement
      ---------------------|------------------
                           |

 ** The following functions were deprecated in Octave 4.2 and have been
    removed from Octave 5.0.

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax
      mahalanobis          | mahal in Octave Forge statistics pkg
      md5sum               | hash
      octave_config_info   | __octave_config_info__
      onenormest           | normest1
      sleep                | pause
      usleep               | pause